styles/style.css
body {
    font-family: 'Lato', sans-serif;
    transition: all .3s;
    margin: 0;
    background-color: #fff;
    font-family: "Tienne", serif;
}

@font-face {
    font-family: "Mrs Eaves Roman";
    src: url("../fonts/MrsEavesRoman.eot");
    src: url("../fonts/MrsEavesRoman.eot?#iefix")format("embedded-opentype"),
        url("../fonts/MrsEavesRoman.woff2")format("woff2"),
        url("../fonts/MrsEavesRoman.woff")format("woff"),
        url("../fonts/Mrs-Eaves-OT-Roman_31443.ttf")format("truetype"),
        url("../fonts/MrsEavesRoman.svg#Mrs Eaves Roman")format("svg");
}

header {
    padding: 0 10px;
    max-height: 60px
}

header nav.navbar {
    max-height: 60px;
    padding: 0px 10px;
}

header .logo {
    margin-right: 8px;
}

header .logo img {
    max-width: 35vw;
    height: auto;
    max-height: 48px;
    width: auto;
}

.mrs-eaves-roman-regular {
    font-family: "MrsEavesRoman Regular";
}


.btn-group.language-select button.btn {
    line-height: 22.5px;
    border: 1px solid #666;
    border-radius: 3px !important;
    padding: 7.5px 15px;
    transition: all .3s;
    width: 100px;
    font-family: "Mrs Eaves Roman", Sans-serif;
    font-size: 15px;
    font-weight: 400;
    color: #333;
    text-align: left;
}

.btn-group.language-select .dropdown-menu {
    width: 120px;
    min-width: unset;
    padding: 0;
}



.navbar-toggler,
.navbar-toggler:focus {
    width: 57px;
    height: 57px;
    border: 0px;
    border: 0;
    border-radius: 0;
    --bs-navbar-toggler-focus-width: 0rem;
    padding: 0 11px;
}

.navbar-toggler.navbar-toggler.collapsed {
    border: 0;
}

.navbar-toggler .icon-bar {
    transition: 300ms ease-in-out;
    background-color: #806D60;
    position: relative;
    width: 35px;
    height: 1px;
    display: block;
    margin: 4px 0;
    text-align: right;
    float: right;
    transform-origin: center;
    clear: both;

}

.navbar-toggler.collapsed .icon-bar:first-child {
    width: 35px;
    height: 1.2px;
}

.navbar-toggler.collapsed .icon-bar:nth-child(2) {
    width: 24px;
}

.navbar-toggler.collapsed .icon-bar:nth-child(3) {
    width: 24px;
    height: 2px;
}

.navbar-toggler .icon-bar:first-child {
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    transform: rotate(45deg);
    top: 9px;
}

.navbar-toggler .icon-bar:nth-child(2) {
    -webkit-transform: rotate(-45deg);
    -ms-transform: rotate(-45deg);
    -o-transform: rotate(-45deg);
    transform: rotate(-45deg);
    top: 0px;
}

.navbar-toggler .icon-bar:nth-child(3) {
    opacity: 0;
}

.navbar-toggler.collapsed .icon-bar {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    top: 0;
    opacity: 1;
}

.navbar-collapse.offcanvas {
    background-color: #806D60;
    padding: 50px 20px;
    top: 0;
    overflow-y: auto;
    margin-top: 57px;
    border: 0;
    opacity: 0;
    transition: all ease-in-out 0s, opacity linear 0.2s; 

}

.navbar-collapse.offcanvas.showing {
    opacity: 0.7;
    transition-duration: 0.7s;
}

.navbar-collapse.offcanvas.show {
    opacity: 1;
    
}

.navbar-collapse.offcanvas.hiding {
    opacity: 0.5;
    transition-duration: 0.5s;
}

.navbar-collapse.offcanvas .navbar-nav {
    width: 100%;

}

.navbar-collapse .nav-item {
    padding: 7px 20px;
}

.navbar-collapse .nav-item a {
    color: #fff;
    font-family: "Tienne", serif;
    font-size: 19px;
    line-height: 24.7px;
}
.navbar-collapse .nav-item a:hover{
    color:#080808;
}

.navbar-collapse .nav-item.d-flex {
    padding-left: 20px;
    padding-top: 20px;
}

.navbar-collapse .nav-item.d-flex a.header-social-icon {
    padding: 0;
    border-radius: 0;
    border: 0;
    margin-right: 20px;
}

.navbar-collapse .nav-item.d-flex a.header-social-icon svg {
    padding: 0;
    fill: #fff;
    width: 30px;
    height: 30px;
}

@media (min-width: 576px) {
    header nav.navbar {
        padding: 0px 20px;
    }

    header .logo img {
        max-width: 38vw;
        max-height: 38px;
    }

    .btn-group.language-select {
        width: 120px;
    }
}

@media (min-width: 991px) {
    header nav.navbar {
        max-height: 66px;
        padding: 13px 20px;
    }

    header .logo img {
        max-width: 16vw;
        height: auto;
        max-height: 40px;
        width: auto;
    }

    .navbar-collapse .nav-item.d-flex {
        padding-left: 0px;
        padding-top: 0px;
    }

    .navbar-collapse .nav-item {
        padding: 0;
    }

    .navbar-collapse .nav-item a:not(.header-reserve-btn):not(.header-social-icon) {
        color: #000000;
        font-size: 15px;
        position: relative;
        padding: 13px 16px;
    }

    .navbar-collapse .nav-item a:not(.header-social-icon):hover {
        color: #806D60;
    }

    .navbar-collapse .nav-item a:not(.header-reserve-btn):not(.header-social-icon).active {
        /* nav-link */
        color: #806D60;


    }

    .navbar-collapse .nav-item a:not(.header-reserve-btn):not(.header-social-icon).active::after,
    .navbar-collapse .nav-item a:not(.header-reserve-btn):not(.header-social-icon):hover::after {
        content: "";
        background-color: #806D60;
        width: 100%;
        height: 3px;
        display: block;
        position: absolute;
        bottom: 0;
        left: 0;
    }

    .navbar-collapse.offcanvas {
        padding: 0;
        margin-top: 0;
        margin-right: auto;
        opacity: 1;
        transition: none;
    }

    .navbar-collapse.offcanvas .navbar-nav {
        width: 100%;
        display: flex;
        flex-wrap: inherit;
        align-items: center;
        justify-content: flex-end;
    }

    .navbar-collapse .nav-item a.header-social-icon {
        padding: 0;
    }

    .navbar-collapse .nav-item.d-flex a.header-social-icon svg {
        fill: #000000;
    }

    .navbar-collapse .nav-item.d-flex a.header-social-icon {
        width: 28px;
        height: 28px;
        border: 1px solid #080808;
        border-radius: 50%;
        display: flex;
        align-items: center;
        justify-content: center;
        margin-right: 8px;
    }

    .navbar-collapse .nav-item.d-flex a.header-social-icon svg {
        width: 20px;
        height: 20px;
    }

    .navbar-collapse .nav-item.d-flex a.header-social-icon+.header-social-icon {
        margin-left: 0px;
        margin-right: 0;
    }

    .navbar-collapse .nav-item a.header-reserve-btn {
        padding: 12px 24px;
        font-family: "Tienne", serif;
        background-color: #806D60;
        font-weight: 400;
        color: #fff;
        font-size: 15px;
        line-height:
            15px;
        border-radius: 10px 10px 10px 10px;
        margin: 0px 12px 0px 24px;

    }
}

@media (min-width: 1200px) {
    .btn-group.language-select button.btn {
        width: 100px;
    }

    .navbar-collapse .nav-item a:not(.header-reserve-btn):not(.header-social-icon) {
        padding: 13px 20px;

    }

    header .logo img {
        max-width: 18vw;
        height: auto;
        max-height: 40px;
        width: auto;
    }
}

.offcanvas-backdrop.fade.show {
    display: none;
}

/* footer styles strats here */
footer {
    background-color: #453A2D;
    margin-top: 212px;
    position: relative;
}

footer .container {
    max-width: 100%;
    padding: 30px 20px;
    position: relative;
}

footer .logo {
    margin-right: 8px;
    margin-bottom: 50px;
}

footer .logo img {
    width: 100%;
    height: auto;
    max-width: 308px;
}

footer:before{
    content: '';
    background-image: url('../images/bg-footer.png');
    width: 206px;
    height: 212px;
    display: block;
    position: absolute;
    top:-212px;
    right:0px
}

footer .d-flex a.header-social-icon {
    padding: 0;
    border-radius: 0;
    border: 0;
    margin: 0 6px;
    display: none;
}

footer .d-flex a.header-social-icon svg {
    padding: 0;
    fill: #fff;
    width: 30px;
    height: 30px;
    
}

footer .scroll-up {
    align-self: flex-end;
    display: flex;
    margin-left: auto;
    color: #fff;
    text-decoration: none;
    text-transform: uppercase;
    font-family: "Roboto", serif;
    font-weight: 300;
    position: absolute;
    right: 20px;
    bottom:120px;
}
footer .scroll-up span {
    transform: rotate(90deg);
    font-size: 11px;
    height: 20px;
    line-height: 20px;
    position: absolute;
    right:-12px;
    bottom:0;
}
footer .scroll-up img {
    animation-duration: 2s;
    transition-duration: 0.31s;
    animation: scrollUp 2s infinite;
    width:11px;
    height: auto;
}

footer ul.menu{
    list-style: none;
    padding: 0px 0 0 0;
    margin: 0;
}
footer ul.menu li{

}
footer ul.menu li a{
    color: #fff;
    font-size: 16px;
    line-height: 24px;
    text-decoration: none;
    margin-bottom: 5px;
    transition: ease all 0.5s;
}
footer ul.menu li a.arrow{
    color: #fff;
    text-transform: uppercase;
    display: flex;
  flex-wrap: inherit;
  align-items: center;
  justify-content: flex-start;
}

footer ul.menu li a:hover{
    padding-left: 20px;
}

footer ul.menu li a.arrow:before{
    content: '';
    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="8.73" height="8.022" viewBox="0 0 8.73 8.022"><g transform="translate(0.172 0.447)"><line x2="8.198" y2="4.099" transform="translate(0.137)" fill="none" stroke="%23fff" stroke-width="1"></line><line y1="3.006" x2="8.198" transform="translate(0 4.099)" fill="none" stroke="%23fff" stroke-width="1"></line></g></svg>');
    background-repeat: no-repeat;
    background-size: cover;
    width:10px;
    height: 10px;
    display: block;
    margin-right: 10px;
}
footer aside{
    background-color: #fff;
    padding: 10px 20px;
    color: #000000;
    font-family: "Tienne", serif;
    font-size: 16px;
    line-height: 24px;
    text-align: center;

}

@keyframes scrollUp {

    0%,
    20%,
    50%,
    80%,
    100% {
        transform: translateY(0);
    }

    40% {
        transform: translateY(-10px);
    }

    60% {
        transform: translateY(-5px);
    }
}

@media (min-width: 576px) {
 
}

@media (min-width: 768px) {
    footer .container {
        max-width: 1240px;
        padding: 70px 20px;
    }

    footer {
        background-color: #453A2D;
    }

    footer .scroll-up {
        flex-direction: row-reverse;
        align-items:center;
        align-self: flex-end;
        display: flex;
        margin-left: auto;
        color: #fff;
        text-decoration: none;
        text-transform: uppercase;
        font-family: "Roboto", serif;
        font-weight: 300;
        position: absolute;
        right: 20px;
        top: calc(50% - 70px);
        bottom: unset;
    }
    footer .scroll-up span {
        transform: rotate(0deg);
        font-size: 17px;
        height: 20px;
        line-height: 20px;
        position: relative;
        right: unset;
    bottom: unset;
    margin-right: 60px;
    }
    footer .scroll-up img {
        width: 22px;
    }
    footer .logo{
        margin-bottom: 0;
    }
    footer .d-flex a.header-social-icon {
  
        display: flex;
    }
    footer ul.menu{
        list-style: none;
        padding: 40px 0 0 0;
    }
    footer ul.menu.pt-lg-8{
        padding-top: 80px;
    }
    footer ul.menu li{
        margin-bottom: 7px;
    }
}

/* footer styles ends here */

.container-fluid.container-bg{
    background-image: url('../images/hotel-background-2-2.png');
    min-height: 100vh;
    background-position: top center;
    background-size: 100% auto;
  background-repeat: no-repeat;
}

